Wed Nov 27 11:54:17 GMT 2013  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Only call AC_PROG_AR if it is defined, to restore
	  compatibility with Automake 1.10.
	* NEWS: Document this.

Wed Nov 27 11:48:29 GMT 2013  Colin Watson  <cjwatson@debian.org>

	Upgrade to Automake 1.14 and Gnulib 20130805.

Sat Nov  9 16:21:05 GMT 2013  Colin Watson  <cjwatson@debian.org>

	* src/tests/man-4: Remove non-portable uses of "echo -n".  Reported
	  by TheSin.

Mon Jul  8 03:00:20 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (gripe_rwopen_failed, update_db_time):
	  Downgrade EAGAIN/EWOULDBLOCK errors from attempts to open a
	  database read-write to debug messages (Debian bug #684235).

Mon Jul  8 02:26:07 BST 2013  Colin Watson  <cjwatson@debian.org>

	* man/man1/whatis.man1 (NAME): Clarify that whatis displays one-line
	  descriptions, rather than e.g. the contents of DESCRIPTION
	  sections (Debian bug #713992).

Mon Jul  8 02:15:52 BST 2013  Colin Watson  <cjwatson@debian.org>

	Reimplement 'apropos --and' in a way that works with the
	optimisations introduced in 2.6.2 (Debian bug #678670).

	* src/whatis.c (any_set, all_set): New functions.
	  (parse_name, parse_whatis): Take an additional found_here
	  parameter and set its elements.  Return void.
	  (do_apropos): Combine results from parse_name and parse_whatis
	  properly according to whether --and is set, rather than relying on
	  counters that will only ever coincidentally match the number of
	  search keywords.
	  (main): Remove apropos_seen hash table.
	* NEWS: Document this.

Mon Jul  8 01:30:56 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/man.c (format_display): Simplify using xasprintf.
	* src/whatis.c (do_apropos): Likewise.

Mon Jul  8 00:29:00 BST 2013  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/zh_CN.po: Fix po4a syntax errors.

Sun Jul  7 22:53:02 BST 2013  Wylmer Wang  <wantinghard@gmail.com>

	* man/po4a/po/zh_CN.po: Update from Translation Project.
