@@ -1,14 +1,18 @@
+**/*.a
 **/*.la
 **/*.lo
+**/*.o
+**/*.so
+**/*~
 **/.libs
-./Makefile
-./autom4te.cache
-./config.h
-./config.log
-./config.status
-./config.status.lineno
-./libtool
-./stamp-h*
+/Makefile
+/autom4te.cache
+/config.h
+/config.log
+/config.status
+/config.status.lineno
+/libtool
+/stamp-h*
 docs/Makefile
 gnulib/lib/.deps
 gnulib/lib/Makefile
