@@ -25,7 +25,7 @@ SUBDIRS = docs gnulib/lib gnulib/po lib libdb src man manual po tools
 dist_noinst_DATA = FAQ NEWS README include/README
 
 EXTRA_DIST = \
-	.bzrignore \
+	.gitignore \
 	autogen.sh \
 	gnulib/m4/gnulib-cache.m4 \
 	gnulib/m4/gnulib-tool.m4 \
