@@ -1,3 +1,11 @@
+Mon Dec  9 00:49:22 GMT 2013  Colin Watson  <cjwatson@debian.org>
+
+	* .bzrignore: Move to ...
+	* .gitignore: ... here, adjusting for differences between bzr and
+	  git.
+	* Makefile.am (EXTRA_DIST): Replace .bzrignore with .gitignore.
+	* gnulib: Add --no-vc-files.
+
 Wed Nov 27 11:54:17 GMT 2013  Colin Watson  <cjwatson@debian.org>
 
 	* configure.ac: Only call AC_PROG_AR if it is defined, to restore
